// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> it renders a Button danger 1`] = `
.c0 {
  padding: 0.625rem 1rem;
  text-align: center;
  line-height: inherit;
  font-size: inherit;
  font-weight: 600;
  border: 1px solid transparent;
  border-bottom-width: 2px;
  border-top-width: 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: all 250ms ease;
  transition: all 250ms ease;
  color: #0c0c0e;
  background: #f6bcc2;
  border-top-color: transparent;
  border-bottom-color: #f08f99;
}

.c0[disabled] {
  cursor: not-allowed;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):focus {
  background: #f9d2d6;
  color: #0c0c0e;
}

.c0:not([disabled]):active {
  position: relative;
  top: 1px;
  background: #fce9eb;
  border-bottom-color: transparent;
  border-top-color: transparent;
}

.c0[aria-pressed="true"] {
  background: #f08f99;
  color: #000;
  border-top-color: #ed7985;
  border-bottom-color: transparent;
}

<div>
  <button
    aria-pressed="false"
    class="c0"
  >
    this is a Button 
    danger
     
  </button>
</div>
`;

exports[`<Button /> it renders a Button info 1`] = `
.c0 {
  padding: 0.625rem 1rem;
  text-align: center;
  line-height: inherit;
  font-size: inherit;
  font-weight: 600;
  border: 1px solid transparent;
  border-bottom-width: 2px;
  border-top-width: 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: all 250ms ease;
  transition: all 250ms ease;
  color: #0c0c0e;
  background: #d7e8f9;
  border-top-color: transparent;
  border-bottom-color: #abcff2;
}

.c0[disabled] {
  cursor: not-allowed;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):focus {
  background: #edf5fc;
  color: #0c0c0e;
}

.c0:not([disabled]):active {
  position: relative;
  top: 1px;
  background: #fff;
  border-bottom-color: transparent;
  border-top-color: transparent;
}

.c0[aria-pressed="true"] {
  background: #abcff2;
  color: #000;
  border-top-color: #94c2ef;
  border-bottom-color: transparent;
}

<div>
  <button
    aria-pressed="false"
    class="c0"
  >
    this is a Button 
    info
     
  </button>
</div>
`;

exports[`<Button /> it renders a Button link 1`] = `
.c0 {
  padding: 0.625rem 1rem;
  text-align: center;
  line-height: inherit;
  font-size: inherit;
  font-weight: 600;
  border: 1px solid transparent;
  border-bottom-width: 2px;
  border-top-width: 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: all 250ms ease;
  transition: all 250ms ease;
  color: #fff;
  background: #006be6;
  border-top-color: transparent;
  border-bottom-color: #0053b3;
}

.c0[disabled] {
  cursor: not-allowed;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):focus {
  background: #07f;
  color: #fff;
}

.c0:not([disabled]):active {
  position: relative;
  top: 1px;
  background: #1a85ff;
  border-bottom-color: transparent;
  border-top-color: transparent;
}

.c0[aria-pressed="true"] {
  background: #0053b3;
  color: #e6e6e6;
  border-top-color: #00479a;
  border-bottom-color: transparent;
}

<div>
  <button
    aria-pressed="false"
    class="c0"
  >
    this is a Button 
    link
     
  </button>
</div>
`;

exports[`<Button /> it renders a Button primary 1`] = `
.c0 {
  padding: 0.625rem 1rem;
  text-align: center;
  line-height: inherit;
  font-size: inherit;
  font-weight: 600;
  border: 1px solid transparent;
  border-bottom-width: 2px;
  border-top-width: 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: all 250ms ease;
  transition: all 250ms ease;
  color: #fff;
  background: #005994;
  border-top-color: transparent;
  border-bottom-color: #003a61;
}

.c0[disabled] {
  cursor: not-allowed;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):focus {
  background: #0068ae;
  color: #fff;
}

.c0:not([disabled]):active {
  position: relative;
  top: 1px;
  background: #0078c7;
  border-bottom-color: transparent;
  border-top-color: transparent;
}

.c0[aria-pressed="true"] {
  background: #003a61;
  color: #e6e6e6;
  border-top-color: #002b48;
  border-bottom-color: transparent;
}

<div>
  <button
    aria-pressed="false"
    class="c0"
  >
    this is a Button 
    primary
     
  </button>
</div>
`;

exports[`<Button /> it renders a Button secondary 1`] = `
.c0 {
  padding: 0.625rem 1rem;
  text-align: center;
  line-height: inherit;
  font-size: inherit;
  font-weight: 600;
  border: 1px solid transparent;
  border-bottom-width: 2px;
  border-top-width: 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: all 250ms ease;
  transition: all 250ms ease;
  color: #0c0c0e;
  background: #eaeaea;
  border-top-color: transparent;
  border-bottom-color: #d1d1d1;
}

.c0[disabled] {
  cursor: not-allowed;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):focus {
  background: #f7f7f7;
  color: #0c0c0e;
}

.c0:not([disabled]):active {
  position: relative;
  top: 1px;
  background: #fff;
  border-bottom-color: transparent;
  border-top-color: transparent;
}

.c0[aria-pressed="true"] {
  background: #d1d1d1;
  color: #000;
  border-top-color: #c4c4c4;
  border-bottom-color: transparent;
}

<div>
  <button
    aria-pressed="false"
    class="c0"
  >
    this is a Button 
    secondary
     
  </button>
</div>
`;

exports[`<Button /> it renders a Button success 1`] = `
.c0 {
  padding: 0.625rem 1rem;
  text-align: center;
  line-height: inherit;
  font-size: inherit;
  font-weight: 600;
  border: 1px solid transparent;
  border-bottom-width: 2px;
  border-top-width: 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: all 250ms ease;
  transition: all 250ms ease;
  color: #0c0c0e;
  background: #e0f2bd;
  border-top-color: transparent;
  border-bottom-color: #ccea92;
}

.c0[disabled] {
  cursor: not-allowed;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):focus {
  background: #eaf6d2;
  color: #0c0c0e;
}

.c0:not([disabled]):active {
  position: relative;
  top: 1px;
  background: #f4fae8;
  border-bottom-color: transparent;
  border-top-color: transparent;
}

.c0[aria-pressed="true"] {
  background: #ccea92;
  color: #000;
  border-top-color: #c2e57d;
  border-bottom-color: transparent;
}

<div>
  <button
    aria-pressed="false"
    class="c0"
  >
    this is a Button 
    success
     
  </button>
</div>
`;

exports[`<Button /> it renders a Button warning 1`] = `
.c0 {
  padding: 0.625rem 1rem;
  text-align: center;
  line-height: inherit;
  font-size: inherit;
  font-weight: 600;
  border: 1px solid transparent;
  border-bottom-width: 2px;
  border-top-width: 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: all 250ms ease;
  transition: all 250ms ease;
  color: #0c0c0e;
  background: #fee5ad;
  border-top-color: transparent;
  border-bottom-color: #fdd57b;
}

.c0[disabled] {
  cursor: not-allowed;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):focus {
  background: #feedc6;
  color: #0c0c0e;
}

.c0:not([disabled]):active {
  position: relative;
  top: 1px;
  background: #fff5df;
  border-bottom-color: transparent;
  border-top-color: transparent;
}

.c0[aria-pressed="true"] {
  background: #fdd57b;
  color: #000;
  border-top-color: #fdcd61;
  border-bottom-color: transparent;
}

<div>
  <button
    aria-pressed="false"
    class="c0"
  >
    this is a Button 
    warning
     
  </button>
</div>
`;

exports[`<Button /> renders 1`] = `
.c0 {
  padding: 0.625rem 1rem;
  text-align: center;
  line-height: inherit;
  font-size: inherit;
  font-weight: 600;
  border: 1px solid transparent;
  border-bottom-width: 2px;
  border-top-width: 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: all 250ms ease;
  transition: all 250ms ease;
  color: #fff;
  background: #006be6;
  border-top-color: transparent;
  border-bottom-color: #0053b3;
}

.c0[disabled] {
  cursor: not-allowed;
}

.c0:not([disabled]):hover,
.c0:not([disabled]):focus {
  background: #07f;
  color: #fff;
}

.c0:not([disabled]):active {
  position: relative;
  top: 1px;
  background: #1a85ff;
  border-bottom-color: transparent;
  border-top-color: transparent;
}

.c0[aria-pressed="true"] {
  background: #0053b3;
  color: #e6e6e6;
  border-top-color: #00479a;
  border-bottom-color: transparent;
}

<div>
  <button
    aria-pressed="false"
    class="c0"
  >
    Toggle button
  </button>
</div>
`;
